--- a/.github/actions/git/steps/generate-release-notes/action.yml
+++ b/.github/actions/git/steps/generate-release-notes/action.yml
@@ -25,7 +25,7 @@ runs:
       id: commit-range
       uses: CLDMV/.github/.github/actions/git/steps/get-commit-range@v1
       with:
-        debug: "false"
+        debug: "true"
 
     - name: Generate release notes
       id: generate
