--- a/.github/workflows/update-major-version-tags.yml
+++ b/.github/workflows/update-major-version-tags.yml
@@ -29,6 +29,37 @@ on:
         required: false
         type: boolean
         default: false
+      # Tag health configuration
+      max_tags:
+        description: "Maximum number of tags to process (safety limit)"
+        required: false
+        type: string
+        default: "100"
+      max_major_versions:
+        description: "Maximum number of major versions to process"
+        required: false
+        type: string
+        default: "10"
+      max_minor_versions:
+        description: "Maximum number of minor versions per major to process"
+        required: false
+        type: string
+        default: "10"
+      bot_patterns:
+        description: "JSON array of bot name patterns to identify bot signatures"
+        required: false
+        type: string
+        default: '["CLDMV Bot", "cldmv-bot", "github-actions[bot]"]'
+      include_patterns:
+        description: "JSON array of tag patterns to include (e.g. ['v*', 'release-*'])"
+        required: false
+        type: string
+        default: '["v*"]'
+      exclude_patterns:
+        description: "JSON array of tag patterns to exclude"
+        required: false
+        type: string
+        default: "[]"
     secrets:
       TAGGER_NAME:
         required: false
@@ -55,12 +86,18 @@ jobs:
     with:
       package_name: "version-tags" # Required input, but not used for this operation
       debug: ${{ inputs.debug }}
-      run_fix_bot_signatures: true
-      run_update_version_tags: true
+      run_unified_tag_health: true
       create_documentation: ${{ inputs.create_documentation }}
       sign: ${{ inputs.sign }}
       annotate: ${{ inputs.annotate }}
       use_gpg: ${{ inputs.use_gpg }}
+      # Tag health configuration
+      max_tags: ${{ inputs.max_tags }}
+      max_major_versions: ${{ inputs.max_major_versions }}
+      max_minor_versions: ${{ inputs.max_minor_versions }}
+      bot_patterns: ${{ inputs.bot_patterns }}
+      include_patterns: ${{ inputs.include_patterns }}
+      exclude_patterns: ${{ inputs.exclude_patterns }}
     secrets:
       TAGGER_NAME: ${{ secrets.TAGGER_NAME }}
       TAGGER_EMAIL: ${{ secrets.TAGGER_EMAIL }}
