--- a/.github/actions/github/api/tag/upsert-batch/action.yml
+++ b/.github/actions/github/api/tag/upsert-batch/action.yml
@@ -6,14 +6,10 @@ inputs:
     description: "Enable debug logging"
     required: false
     default: "false"
-  sign:
-    description: "Sign the tag? 'auto' (default) signs if a GPG key is provided; 'true' forces signing; 'false' disables it."
+  gpg_enabled:
+    description: "Whether GPG signing should be used (auto-detected from workflow)"
     required: false
-    default: "auto"
-  annotate:
-    description: "Create an annotated tag? 'auto' (default) annotates if signing or a message is provided; 'true' forces annotated; 'false' creates a lightweight tag."
-    required: false
-    default: "auto"
+    default: "false"
   tagger_name:
     description: "Tagger name (defaults to bot/user name if unset)"
     required: false
@@ -21,7 +17,7 @@ inputs:
     description: "Tagger email (defaults to bot/user email if unset)"
     required: false
   gpg_private_key:
-    description: "ASCII-armored private key for signing (if provided and sign=auto/true)"
+    description: "ASCII-armored private key for signing (if gpg_enabled=true)"
     required: false
   gpg_passphrase:
     description: "Passphrase for the private key (if applicable)"
