ci(workflows): update workflow reference to local path for major version tags

--- a/.github/workflows/local-update-major-version-tags.yml
+++ b/.github/workflows/local-update-major-version-tags.yml
@@ -26,7 +26,7 @@ permissions:
 
 jobs:
   update-tags:
-    uses: CLDMV/.github/.github/workflows/workflow-update-major-version-tags.yml@v1
+    uses: ./.github/workflows/workflow-update-major-version-tags.yml
     permissions:
       contents: write
     with:
