style(workflows): comment out unused package_name input in CI and release workflows

--- a/.github/workflows/workflow-update-major-version-tags.yml
+++ b/.github/workflows/workflow-update-major-version-tags.yml
@@ -75,7 +75,7 @@ jobs:
     permissions:
       contents: write
     with:
-      package_name: "version-tags" # Required input, but not used for this operation
+      #   package_name: "version-tags" # Required input, but not used for this operation
       debug: ${{ inputs.debug }}
       run_unified_tag_health: true
       create_documentation: ${{ inputs.create_documentation }}
